--- a/wd/layout/example.html
+++ b/wd/layout/example.html
@@ -1,15 +1,12 @@
-<%mod_load('body之前内容','unitaryConfig','body_before.html')%>
+<%mod_load('','unitaryConfig','body_before.html')%>
 <div class="allwrap">
     <%mod_load('共用头部','p_header','def.html')%>
     <div class="page">
-        <div class="m_example">
-            我是示例页面
-            <%mod_load('共用头部','p_banner','def.html')%>
-        </div>
+        <%mod_load('示例页面','m_example','def.html')%>
     </div>
-    <%mod_load('共用头部','p_footer','def.html')%>
+    <%mod_load('共用尾部','p_footer','def.html')%>
 </div>
 <script>
     APP.example.init();
 </script>
-<%mod_load('body之后内容','unitaryConfig','body_after.html')%>
+<%mod_load('','unitaryConfig','body_after.html')%>
